--- a/Game/Theme/dzs/index.html
+++ b/Game/Theme/dzs/index.html
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="flbox w256">
-            <a class="rota1" href="http://static.yiwanshu.com">微端下载<span>仅需1秒极速下载</span></a>
+            <a class="rota1" href="http://www.yiwanshu.com">微端下载<span>仅需1秒极速下载</span></a>
             <a class="rota2" href="http://gift.yiwanshu.com">新手礼包<span>新手必备</span></a>
             <a class="rota3" href="/dzs/zigw/121949">VIP特权<span>好礼享不停</span></a>
         </div>
