--- a/Theme/default/Gateway/Game/nostatus.html
+++ b/Theme/default/Gateway/Game/nostatus.html
@@ -88,7 +88,7 @@ a:hover {
 <div class="tp980">
         <div class="tp_tit">
             <h2>试试其他热门页游</h2>
-            <a href="http://www.yiwanshu.com" class="more_a">更多</a>
+            <a href="http://www.qiluwan.com" class="more_a">更多</a>
         </div>
         <div class="qitags clearfix">
             <p>
