--- a/Theme/default/Common/Game/layout_theme_dzz.html
+++ b/Theme/default/Common/Game/layout_theme_dzz.html
@@ -62,7 +62,7 @@
             
             <div class="w-focus" id="w-focusimg">
                     <ul>
-                            <li style="background-image:url(http://static.qiluwan.com/Public/theme/theme_dzz/images/bg01.jpg)">
+                            <li style="background-image:url(http://www.yiwanshu.com/Public/theme/theme_dzz/images/bg01.jpg)">
                                 <!-- <a title="" href="#"></a> -->
                                 <div class="top">
 
