--- a/Theme/default/Game/Default/index.html
+++ b/Theme/default/Game/Default/index.html
@@ -126,7 +126,7 @@
 		<div class="inforbanr">
 			<ul>
 				<li>
-					<div class="btncolor1 btncolor" target="_blank" style="background:url(http://static.qiluwan.com/Public/theme/images/14534353623735.jpg) no-repeat;">
+					<div class="btncolor1 btncolor" target="_blank" style="background:url(http://www.yiwanshu.com/Public/theme/images/14534353623735.jpg) no-repeat;">
 						<a class="ibtn ibtn1" target="_blank" href="{:U($gamedata['mark'].'/news_list',Array('cid'=>7))}">查看详情</a>
 					</div>
 				</li>
