--- a/Theme/default/Shop/Index/layout.html
+++ b/Theme/default/Shop/Index/layout.html
@@ -139,7 +139,8 @@
         <div class="hidden">{:C('WEB_SITE_STATISTICS')}</div>
     </div>
     <block name="footer_script"></block>
-    <import type='js' file="theme.js.common" />
+    <script src="/Public/theme/js/common.js"></script>
+    <!--<import type='js' file="theme.js.common" />-->
     <script type="text/javascript">
         var MODULE_NAME='{:MODULE_NAME}'.toUpperCase();
         $('#NAV_'+MODULE_NAME).addClass('cur');
