--- a/Game/Theme/jz/layout.html
+++ b/Game/Theme/jz/layout.html
@@ -169,8 +169,10 @@
     <div class="hidden">{:C('WEB_SITE_STATISTICS')}</div>
 </div>
 <block name="footer_script"></block>
-<import type='js' file="theme.js.common" />
-<import type='js' file="theme.js.t3t2_popup_plus" />
+<script src="/Public/theme/js/common.js"></script>
+<script src="/Public/theme/js/t3t2_popup_plus.js"></script>
+<!--<import type='js' file="theme.js.common" />-->
+<!--<import type='js' file="theme.js.t3t2_popup_plus" />-->
 <script type="text/javascript">
 var topboxbg_url = '{$gamedata.pic.pic_site_bg|get_cover=###}';
 var topboxbg_img = new Image();
