--- a/Theme/default/Gateway/Game/notime.html
+++ b/Theme/default/Gateway/Game/notime.html
@@ -116,7 +116,7 @@ a:hover {
 <div class="tp980">
         <div class="tp_tit">
             <h2>试试其他热门页游</h2>
-            <a href="http://game.qiluwan.com" class="more_a">更多</a>
+            <a href="http://game.yiwanshu.com" class="more_a">更多</a>
         </div>
         <div class="qitags clearfix">
             <p>
