--- a/Theme/default/Gateway/Game/baidu.html
+++ b/Theme/default/Gateway/Game/baidu.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>齐鲁玩百度搜索</title>
+<title>一玩速百度搜索</title>
 <import type='js' file="jquery.jquery183min" />
 <style type="text/css">
 /*左侧菜单*/
