--- a/Theme/default/Home/Index/index.html
+++ b/Theme/default/Home/Index/index.html
@@ -192,7 +192,7 @@ a{font-size:12px; color:#666; text-decoration:none;}
 .lanrenzhijia{ width:260px; height:160px;   position:fixed; right:-300px; bottom:10px;}
 .lanrenzhijia .close{ width:30px; height:22px; line-height:22px;display:block; float:right;}
 </style>
-<script src="js/jquery.min.js"></script>
+<script src="/Public/jquery/jquery-2.1.1.min.js"></script>
 <script>
 $(function (){
 $('.lanrenzhijia').animate({right:'10px'},1000);
